# INFERENCE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  main.py  main_backup.py  main_v1.py  main_v2.py  pyproject.toml
.claude/: settings.local.json
.github/: AGENTS.md
data/: Balsas_MA.csv  README.md
data_raw/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: acronyms_and_methods.md  index.md  limitations.md  methodology.md  methodology_diagram.md
manuscript/: README.md  appendix_dag.tex  appendix_inmet_validation.tex  manuscript.tex  references.bib
output/: deterministico_2020_2021.csv  deterministico_2021_2022.csv  deterministico_2022_2023.csv  deterministico_2023_2024.csv  deterministico_2024_2025.csv  laminas_recomendadas.csv  metricas_probabilisticas.csv  metricas_sequenciais.csv  previsao_2020_2021.csv  previsao_2021_2022.csv  previsao_2022_2023.csv  previsao_2023_2024.csv  previsao_2024_2025.csv  validacao_xavier.csv
scripts/: analyze_backtest_rolling.py  analyze_validation.py  audit_labels.py  audit_manuscript.py  audit_numbers.py  backtest_ab_fusion.py  check_tex_refs.py  compare_bayes_vs_xavier.py  compute_climatological_normals.py  convert_csv_to_latex.py  crop_loader.py  download_atlantic_indices.py  download_mei.py  download_oni.py  eto_alternatives_comparison.py  extract_matopiba_cad_from_ana.py  extract_xavier_matopiba.py  fit_dbn_enso.py  generate_forecast_seq_figures.py  generate_forecast_seq_tables.py  generate_mcmc_diagnostics.py  generate_methodology_flowchart.py  generate_paper_figures.py  generate_paper_methods_tables.py  generate_study_area_map.py  identify_distributions.py  inmet_pilot_urucui.py  inmet_validation_multistation.py  learn_climate_dag.py  oceanic_indices_consolidator.py  plot_climate_atlas.py  (+4 more)
(+414 files in other folders)
