[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bwb"
version = "0.1.0"
description = "Bayesian Water Balance framework for irrigation scheduling"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "INFERENCE Team", email = "inference@example.com"},
]
keywords = ["water-balance", "bayesian", "irrigation", "agriculture", "soybean"]

dependencies = [
    "numpy>=1.21",
    "pandas>=2.0",
    "scipy>=1.10",
    "pymc>=5.0",
    "arviz>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
parallel = [
    "joblib>=1.3",
]
forecast = [
    "xarray>=2023.0",
    "netcdf4>=1.6",
]

[project.scripts]
bwb = "bwb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bwb*"]

[tool.setuptools.package-data]
"bwb.config" = ["regional/*.toml"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --tb=short"
markers = [
    "slow: marks tests that fit a PyMC model (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:arviz",
    "ignore::FutureWarning:arviz",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["temp", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "temp|\\.venv|build|dist"